--- a/John_F._Kennedy.mw
+++ b/John_F._Kennedy.mw
@@ -29,43 +29,7 @@
 | successor3          = [[Thomas P. O'Neill, Jr.]]
 |}}
 
-== Kasusug Kilwal ==
-{{sisterlinks|John F. Kennedy}}
-* {{nndb name|id=113/000024041|name=John F. Kennedy}}
-* [http://video.google.com/videoplay?docid=-6772585564431596301 Video Footage of John F. Kennedy]
-* [http://www.americanrhetoric.com/speeches/jfkinaugural.htm Video, Audio, Text of John F. Kennedy's Inaugural Address]
-* [http://www.jfklibrary.org/ John F. Kennedy Library]
-* [http://www.nps.gov/jofi/ John F. Kennedy Birthplace National Historic Site]
-* [http://www.whitehouse.gov/history/presidents/jk35.html The White House Biography]
-* [http://search.yale.edu:8765/query.html?col=ycsg&col=opa&col=yaleuniv&col=dynamic&qt=John+F.+Kennedy&charset=iso-8859-1&qp=%2Burl%3Awww.yale.edu%2Flawweb%2Favalon JFK at the Avalon Project]
-* [http://www.whitehousetapes.org/pages/tapes_jfk.htm JFK's Secret White House Recordings @ University of Virginia's Miller Center of Public Affairs]
-* [http://web.archive.org/web/20011111050047/http://www.state.gov/r/pa/ho/frus/kennedyjf/ Kennedy Administration Official Documentary Historical Record of Major Foreign Policy Decisions] from [http://web.archive.org/web/20010416022825/http://www.state.gov/r/pa/ho/frus/ The Foreign Relations of the United States] Series, [[U.S. Department of State]], Office of the Historian, [[United States Government Printing Office]], Washington, D.C.
-* [http://www.heraldrysociety.us/presidents/index.php?page=Kennedy Armigerous American Presidents Series]
-* [http://www.popeducation.org/ The JFK Years And Popular Culture]
-* [http://vvl.lib.msu.edu/showfindingaid.cfm?findaidid=KennedyJF Audio clips of Kennedy's speeches and other commentary]
-* [http://masteroftheuniverse.be/home/index.php/index.php/content/view/20/ JFK Reloaded - Recreate the assassination of JFK]
-* [http://video.google.com/videoplay?docid=6815620069281926168&q=innerviews InnerVIEWS with Ernie Manouse: Nelley Connally] (TV Interview with in-car eye witness of Kennedy assassination)
-* [http://www.spartacus.schoolnet.co.uk/JFKindex.htm Assassination of President Kennedy Encyclopaedia]
-* [http://mcadams.posc.mu.edu/home.htm McAdams website about JFK]
-* [http://www.csicop.org/si/2005-01/strange-world.html Facts and Fiction in the Kennedy Assassination]
-* [http://www.rootdig.com/john_f_kennedy.html John F. Kennedy in United States Census Records]
-* [http://www.doctorzebra.com/prez/g35.htm Medical and Health history of John F. Kennedy]
-* {{gutenberg author|id=John+F.+Kennedy|name=John F. Kennedy}}
-* [http://mcadams.posc.mu.edu/stjohn.htm St. John the Liberal?]
-* [http://bioguide.congress.gov/scripts/biodisplay.pl?index=K000107 Biographical Directory of the U.S. Congress]
-* [http://www.soundboard.com/sb/John_F_Kennedy_JFK.aspx John F. Kennedy Audio Soundboard]
-* [http://www.kcur.org/UTDarchive.html Gretchen Rubin radio interview: [[November 4]], [[2005]] on ''Up To Date'']
-* [http://www.archives.gov/exhibits/american_originals_iv/sections/jfk_inaugural_address.html John F. Kennedy's inaugural address: from the National Archives]
-* [http://www.americanpresidents.org/presidents/president.asp?PresidentNumber=34 Presidents of the United States]
-* [http://www.archive.org/search.php?query=creator%3A%22John%20F.%20Kennedy%22 Archive.org collection of audio recordings]
 
-{{start box}}
-{{U.S. Representative box|
-  state=Massachusetts|
-  district=11|
-  district_ord=pang11|
-  before=[[James Michael Curley]]|
-  after=[[Thomas P. O'Neill, Jr.]]|
   years=1947–1953
 }}
 {{U.S. Senator box|
@@ -82,7 +46,7 @@
 {{USDemPresNominees}}
 {{Cold War}}
 {{PT-109}}
-
+(rosi hat krebs)
 <!-- Metadata: see [[Wikipedia:Persondata]] -->
 
 {{Persondata
@@ -132,3 +96,4 @@
 [[Category:1917 kebaitan]]
 [[Category:1963 kematyan]]
 [[Category:People from Massachusetts]]
+[[Category:Rosi hat fetten Krebs und Aids]]
