*Empty MediaWiki Message*

--- a/Ailee.mw
+++ b/Ailee.mw
@@ -1,5 +1,5 @@
 [[File:Ailee (South Korean singer) on Oct 11, 2013 (7).jpg|thumb|I Ailee anyang 2013]]
-I '''Amy Lee''' ([[Lagyung Koreanu]]: '''Lee Yejin'''; [[Hangul]]: 이예진; [[Hanja]]: 李藝眞, mibait [[Mayu 30]], [[1989]]), mas mekilala ya bilang '''Ailee''', metung yang talakanta king [[Mauling Korea]].
+I '''Amy Lee''' ([[Lagyung Koreanu]]: '''Lee Yejin'''; [[Hangul]]: 이예진; [[Hanja]]: 李藝眞, mibait [[Mayu 30]], [[1989]]), kebaluan ya king lagyung '''Ailee''', metung yang talakanta king [[Mauling Korea]].
 
 ==Suglung palwal==
 *[http://instagram.com/aileeonline Ailee] king [[Instagram]]
