*Empty MediaWiki Message*

--- a/Mississippi.mw
+++ b/Mississippi.mw
@@ -2,7 +2,7 @@
 {{US state |
   Name            = Mississippi|
   Fullname        = State ning Mississippi|
-  Flag            = Flag of Mississippi.svg |
+  Flag            = Flag of Mississippi.svg{{!}}border |
   Flaglink      = [[Bandera ning Mississippi]] |
   Seal            = Seal of Mississippi.jpg |
   Map             = Map_of_USA_highlighting_Mississippi.png |
