--- a/Dilo.mw
+++ b/Dilo.mw
@@ -1,6 +1,6 @@
 [[Image:Auto Racing Yellow.svg|thumb|right|Ing diwa ning dilo.]]
 
-Ing '''dilo''' ([[English]]: ''yellow'') metung yang tinduk ning kule (diwa).
+Ing '''dilo''' o '''mapapas''' ([[English]]: ''yellow'') metung yang tinduk ning kule (diwa).
 
 
 {{Shades of yellow|*}}
