*Empty MediaWiki Message*

--- a/Pinanari.mw
+++ b/Pinanari.mw
@@ -1,5 +1,5 @@
 [[File:Double-alaskan-rainbow.jpg|thumb|Ing pinanari king [[Alaska]].]]
-Ing '''pinanari''' ([[Amanung Ingles|Ingles]]: ''Rainbow'', [[Amanung Tagalug|Tagalug]]: ''Bahaghari'', ''bahagsubay'' o ''balangaw''), metung yang penomenung mayakit king banwa kaibat ning uran. Atin yang pitung kulul patse mebuo ya: [[malutu]], [[kulyawan]], [[mapapas]], [[aluntiang]], [[iro]], [[tayum]] at [[malaubi]].
+Ing '''pinanari''' o '''pinangari''' ([[Amanung Ingles|Ingles]]: ''Rainbow'', [[Amanung Tagalug|Tagalug]]: ''Bahaghari'', ''bahagsubay'' o ''balangaw''), metung yang penomenung mayakit king banwa kaibat ning uran. Atin yang pitung kulul patse mebuo ya: [[malutu]], [[kulyawan]], [[mapapas]], [[aluntiang]], [[iro]], [[tayum]] at [[malaubi]].
 
 {{Suli}}
 
