*Empty MediaWiki Message*

--- a/Baga.mw
+++ b/Baga.mw
@@ -11,8 +11,7 @@ lunto reng bronchiole.<small> (Pikwanan:
 Ing '''baga''' ing pekamaulaga nang dake king [[:en:respiration|respiration]] 
 kareng [[:en:vertebrate|vertebrate]] a mangisnawang angin. 
 Ing pekamaulaga nang gamit yapin ing pamagdala king [[:en:oxygen|oxygen]] 
-manibat king kilwal papunta king pupulayan ning daya, at maglwal [[:en:carbon dioxide]] 
-manibat king daralanan ning daya palwal. Agagawa na iti kapamilatan ning metung a mosaic da reng makabukud a cell a bibilug milyun-milyung mangalatiktik at misna kaimpis a suput-suputan a angin (air sac) nung nu malilyari ing [[:en:gas exchange|gas exchange]]. Magagamit la murin kareng bageng e konektadu king pamangisnawa deng baga. 
+manibat king kilwal papunta king pupulayan ning daya, at magluwal ''[[:en:carbon dioxide|carbon dioxide]]'' manibat king daralanan ning daya palwal. Agagawa na iti kapamilatan ning metung a mosaic da reng makabukud a cell a bibilug milyun-milyung mangalatiktik at misna kaimpis a suput-suputan a angin (air sac) nung nu malilyari ing [[:en:gas exchange|gas exchange]]. Magagamit la murin kareng bageng e konektadu king pamangisnawa deng baga. 
  
 Magumpisa la king '''''pulmo-''''' deng katayang pang-medicinang maki kaugnayan 
 king baga. Ibat ya iti king amanung Latin a ''pulmonarius'' ("of the lungs"), a 
