*Empty MediaWiki Message*

--- a/Baga.mw
+++ b/Baga.mw
@@ -8,10 +8,10 @@ bronchiole. King larawan a ini, leko ra itang makatakap a laman ning baga ba la
 lunto reng bronchiole.<small> (Pikwanan: 
 ''[[Gray's Anatomy|Gray's Anatomy of the Human Body]]'', 20th ed. 1918.)</small>]]
 
-Ing '''baga''' ing pekamaulaga nang dake king [[:en:respiration|respiration]] 
+Ing '''baga''' ing pekamaulaga nang dake king [[pangisnawa]] 
 kareng [[:en:vertebrate|vertebrate]] a mangisnawang angin. 
 Ing pekamaulaga nang gamit yapin ing pamagdala king [[:en:oxygen|oxygen]] 
-manibat king kilwal papunta king pupulayan ning daya, at magluwal ''[[:en:carbon dioxide|carbon dioxide]]'' manibat king daralanan ning daya palwal. Agagawa na iti kapamilatan ning metung a mosaic da reng makabukud a cell a bibilug milyun-milyung mangalatiktik at misna kaimpis a suput-suputan a angin (air sac) nung nu malilyari ing [[:en:gas exchange|gas exchange]]. Magagamit la murin kareng bageng e konektadu king pamangisnawa deng baga. 
+manibat king kiluwal papunta king pupulayan ning daya, at magluwal ''[[:en:carbon dioxide|carbon dioxide]]'' manibat king daralanan ning daya palwal. Agagawa na iti kapamilatan ning metung a ''mosaic'' da reng makabukud a cell a bibilug milyun-milyung mangalatiktik at misna kaimpis a suput-suputan a yangin (air sac) nung nu malilyari ing [[:en:gas exchange|gas exchange]]. Magagamit la murin kareng bageng e konektadu king pamangisnawa deng baga. 
  
 Magumpisa la king '''''pulmo-''''' deng katayang pang-medicinang maki kaugnayan 
 king baga. Ibat ya iti king amanung Latin a ''pulmonarius'' ("of the lungs"), a 
