*Empty MediaWiki Message*

--- a/Baga.mw
+++ b/Baga.mw
@@ -15,7 +15,7 @@ manibat king kiluwal papunta king pupulayan ning daya, at magluwal ''[[:en:carbo
  
 Magumpisa la king '''''pulmo-''''' deng katayang pang-medicinang maki kaugnayan 
 king baga. Ibat ya iti king amanung Latin a ''pulmonarius'' ("of the lungs"), a 
-kapareu na penibatan ning [[:en:Greek language|amanung Griego]] a ''pleumon'' 
+kapareu na penibatan ning [[amanung Griyegu]] a ''pleumon'' 
 ("baga"). 
 
 == Ing papil ning baga king respiration ==
@@ -64,8 +64,8 @@ prisyun, itang kabaligtaran ing malilyari.
 == Deng obra ning bagáng e makasuglung king pangisnawa ==
 
 Liban king papil da reng baga king pamangisnawa (respiration), antimo ing 
-[[:en:gas exchange|gas exchange]] ampo ing pamanibala king 
-[[:en:concentration|karaklan]] da reng [[:en:hydrogen ion|hydrogen ion]], atin 
+[[:en:gas exchange|gas exchange]] ampo ing pamanibala king keraklan
+(''[[:en:concentration|concentration]]'') da reng [[:en:hydrogen ion|hydrogen ion]], atin 
 la pang aliwang daraptan deng baga:
 * atin lang epektu king karaklan (concentration) da reng biologically active 
 substances o sangkap a tatalab kareng bageng mabibye, ampo reng panulung 
