--- a/Amanung_Griyegu.mw
+++ b/Amanung_Griyegu.mw
@@ -1,3 +1,5 @@
 Ing '''Amanung Griyegu''' o '''Griegu''' (ελληνικά, ''elliniká'', '''"Griyegu"'''; ελληνική γλώσσα, ''ellinikí glóssa'', '''"Amanung Griyegu"''') metung yang pamyalita king [[Greece|Gresya]].
 
 {{Suli}}
+
+[[Category:Deng amanu ning Europa]]
