*Empty MediaWiki Message*

--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -1,5 +1,5 @@
 {{Infobox Language 
- |        name = Spanish, Castilian
+ |        name = Espanyol, Kastila
  | nativename = {{lang|es|Español}}, {{lang|es|Castellano}}
  |pronunciation=/espa'ɲol/, /kaste'ʎano/ or /kaste'ʝano/
  | familycolor = Indo-European
