--- a/Mississippi.mw
+++ b/Mississippi.mw
@@ -4,7 +4,7 @@
   Fullname        = State ning Mississippi|
   Flag            = Flag of Mississippi.svg{{!}}border |
   Flaglink      = [[Bandera ning Mississippi]] |
-  Seal            = Seal of Mississippi.jpg |
+  Seal            = Seal of Mississippi 2014.svg|
   Map             = Map_of_USA_highlighting_Mississippi.png |
   Nickname        = Magnolia State |
   Capital         = [[Jackson, Mississippi|Jackson]] |
