*Empty MediaWiki Message*

--- a/Paul_McCartney.mw
+++ b/Paul_McCartney.mw
@@ -1,5 +1,4 @@
 {{Use dmy dates|date=January 2014}}
-
 {{Infobox musical artist
 | name                = Sir Paul McCartney <br>{{post-nominals|MBE}}<!-- note he's a Knight Bachelor, which does not have postnoms, not a KBE (Knight Commander of the Order of the British Empire)-->
 | birth_name          = James Paul McCartney
@@ -22,9 +21,9 @@
 | module = {{Listen |embed= yes |filename= Paul_McCartney_BBC_Radio4_Front_Row_26_Dec_2012_b01pg54v.flac |title= Paul McCartney's voice |type= speech |description= from the BBC programme ''[[Front Row (radio)|Front Row]]'', 26 December 2012.<ref>{{Cite episode |title= Paul McCartney |series= Front Row |serieslink= Front Row (radio) |url= http://bbc.co.uk/programmes/b01pg54v |station= [[BBC Radio 4]] |date= 26 December 2012 |accessdate= 18 January 2014 }}</ref> }}
 }}
 
-I James Paul McCartney,(mibait ya 18 June 1942) metung yang Ingles a magkanta,musikeru, bokalista (vocalist) ampong talasulat amanu (lyricist) ning bandang Beatles, na kayabe nang [[John Lennon]], [[George Harrison]] and [[Ringo Starr]], keng bandang [[Beatles]], kayari yang me disbanda ing grupo da, Inumpisan ng meg (solo) kabat memuu yang sarili ng banda na kilala "[[Wings]]" kayabe ing kayang mumunang asawa Linda, at ampo I Denny Laine.Ing Guinness World Records ing meg gawad kang McCartney bilang "pinaka (successful) na talasulat ampo (recording artist of all time) ", atin yang (60 gold discs) ampo (100 million albums and 100 million singles), 
+I '''James Paul McCartney''' (mibait 18 Hunyu 1942) metung yang Ingles a talakanta, musikeru, bokalista ampong talasulat amanu (lyricist) ning bandang [[Beatles]], a kayabe dari [[John Lennon]], [[George Harrison]] and [[Ringo Starr]], king bandang [[Beatles]], kayari yang medisbanda ing grupo da, Inumpisan ng meg (solo) kabat memuwu yang sarili nang banda a mekilala "[[Wings]]" kayabe ya ing kayang mumunang asawa Linda, ampo I Denny Laine. Ing Guinness World Records ing miggawad kang McCartney bilang "pekamatagumpeng talasulat ampo ''recording artist of all time''", atin yang (60 gold discs) ampo (100 million albums and 100 million singles), 
 
-Meging parte ya kareng proyetung mag-promote kareng (international) na kawang gawa na tatalake keng karapatan da reng (animals), seal hunting, landmines, vegetarianism, poverty, and Edukasyun pare keng Tugtugan. KInasal ya maki atlu beses kerang atlu babai at tin yang limang anak.
+Meging parte ya kareng proyektung mag-promote kareng (international) na kawang gawa na tatalake keng karapatan da reng (animals), seal hunting, landmines, vegetarianism, poverty, and Edukasyun pare keng Tugtugan. Mekasal ya maki atlu beses kareng atlu babayi at atin yang limang anak.
 
 == Diskograpiya ==
 {{col-begin}}
@@ -146,7 +145,7 @@ Meging parte ya kareng proyetung mag-promote kareng (international) na kawang ga
 * {{cite book|last1=Wenner|first1=Jann|authorlink=Jann Wenner|last2=George-Warren|first2=Holly (editor)|year=2000|publisher=Verso|title=Lennon Remembers|isbn=1-85984-600-9 |url=http://books.google.com/books?id=ymjy06WZnd4C&dq |ref=harv}}
 {{Refend}}
 
-== Further reading ==
+== Makimayigit pang pamagbasa ==
 {{Refbegin}}
 * {{cite book|last=Barrow |first=Tony |year=2005 |title=John, Paul, George, Ringo & Me: The Real Beatles Story |publisher=Thunder's Mouth |isbn=1-56025-882-9|url= http://books.google.com/books?id=BNnzcGw8JQsC&dq }}
 * {{cite book|last=Barrow|first=Tony|year=2004|title=Paul McCartney|publisher=Carlton Publishing|isbn=978-1-84442-822-9 }}
