--- a/Paul_McCartney.mw
+++ b/Paul_McCartney.mw
@@ -99,7 +99,7 @@ Meging parte ya kareng proyektung mag-promote kareng (international) na kawang g
 == Delarayan ==
 {{Reflist|30em|group=nb}}
 
-== Sources ==
+== Deng Pikuanan ==
 {{Refbegin|30em}}
 * {{cite book|last1=Babiuk|first1=Andy|last2=Bacon|first2=Tony (editor)|title=Beatles Gear: All the Fab Four's Instruments, from Stage to Studio|year=2002 |publisher=Backbeat Books|edition=Revised|isbn=978-0-87930-731-8|url=http://books.google.com/books?id=Eo743Uh2UOEC&dq |ref=harv}}
 * {{cite book|last1=Bacon|first1=Tony|last2=Morgan|first2=Gareth|year=2006|title=Paul McCartney&nbsp;– Bass Master&nbsp;– Playing the Great Beatles Basslines |publisher=Backbeat Books|edition=1st|isbn=978-0-87930-884-1|url=http://books.google.com/books?id=V-BG7p7xPTQC&dq |ref=harv}}
