Lilipat ya king [[Imelda]]

--- a/Imelda_Marcos.mw
+++ b/Imelda_Marcos.mw
@@ -1,11 +1,1 @@
-[[image:Imelda Marcos.jpg|right|thumb|300px|Imelda Marcos]]
-
-Metung yang politicu king [[Filipinas]] i '''Imelda Remedios Visitación Trinidad Romuáldez-Marcos''' (Hulyo 2, [[1929]]). King balu nang i [[Ferdinand Marcos]].<ref name = "Ellison">Katherine Ellison, ''Imelda, Steel Butterfly of the Philippines'', McGraw-Hill, New York, 1988. ISBN 0-07-019335-5</ref><ref>''Imelda: a Story of the Philippines'', Beatriz Francia</ref><ref>{{cite news| last = Rowan| first = Roy
-| title = Orchid or Iron Butterfly, Imelda Marcos Is a Prime Mover in Manila| publisher = People Magazine| date = March 29, 1979 | url =http://www.people.com/people/archive/article/0,,20066297,00.html}}</ref>
-
-{{Reflist}}
-
-{{commonscat|VIAF=113806714|LCCN=n50075853|ISNI=0000 0001 1497 2036|GND=122298527|BNF=cb121536210|NDL=00621064}}
-
-[[Category:Filipino Politicu]]
-[[Category:Talambye]]
+#REDIRECT [[Imelda]]
