--- a/Yoon_Eun-hye.mw
+++ b/Yoon_Eun-hye.mw
@@ -21,7 +21,7 @@
 
 I '''Yoon Eun Hye''' (Hangul: ''윤은혜'', Hanja:''尹恩惠'') metung yang artista king [[Mauling Korea]].
 
-== Kawing Panluwal ==
+== Suglung Palwal ==
 * <!--The fansite was added because its news section is sourced, and the page is in English.  If you wish to contest this, please write in the talk page.  Thank you.-->
 * [http://www.yooneunhye.org/news.html News at YoonEunHye.org, an English fansite with extensive information]
 * [http://www.eunhye1003.com/ Yoon Eun Hye Official Fanclub Neri]
