*Empty MediaWiki Message*

--- a/Rain_(talakanta).mw
+++ b/Rain_(talakanta).mw
@@ -2,6 +2,10 @@
 
 I '''Jung Ji Hoon''' (mas mekilala ya bilang '''Rain''') metung yang manganganta at manenerak king [[Mauling Korea]].
 
+==Suglung Palwal==
+{{Commons category|Rain (Jeong Ji-hoon)|Rain}}
+* {{Official website|http://rain-jihoon.com/n2/eng/}}
+* [http://mnet.interest.me/tv/vod/159311 Rain Effect reality show official website]
 {{stub}}
 
 [[Category:Deng artista king Mauling Korea]]
