*Empty MediaWiki Message*

--- a/Lee_Min-ho.mw
+++ b/Lee_Min-ho.mw
@@ -1,3 +1,4 @@
+[[File:Lee Min Ho.jpg|thumb|I Lee Min-ho bilang LG Optimus Ambassador.]]
 I '''Lee Min-ho''' ([[Hangul]]: 이민호; [[Hanja]]: 李敏鎬, mibait Hunyu 22, 1987 king [[Seoul]]), metung yang [[artista]], [[talakanta]] ampo [[modelu]] king [[Mauling Korea]]. Mas mekilala ya kareng papel na king ''[[Boys Over Flowers]]'' (2009), ''[[City Hunter]]'' (2011) at ''[[The Heirs]]'' (2013).
 
 ==Suglung Palwal==
