*Empty MediaWiki Message*

--- a/Imelda_Marcos.mw
+++ b/Imelda_Marcos.mw
@@ -3,6 +3,7 @@
 I '''Imelda Remedios Visitación Trinidad Romuáldez-Marcos''' (Hulyo 2, [[1929]]), kebalwan ya king lagyung '''Imelda Marcos''', metung yang politiku king Pilipinas. Iya pin ing balu nang sadyang Pamuntuk [[Ferdinand Marcos]].<ref name = "Ellison">Katherine Ellison, ''Imelda, Steel Butterfly of the Philippines'', McGraw-Hill, New York, 1988. ISBN 0-07-019335-5</ref><ref>''Imelda: a Story of the Philippines'', Beatriz Francia</ref><ref>{{cite news| last = Rowan| first = Roy
 | title = Orchid or Iron Butterfly, Imelda Marcos Is a Prime Mover in Manila| publisher = People Magazine| date = March 29, 1979 | url =http://www.people.com/people/archive/article/0,,20066297,00.html}}</ref>
 
+==Dalerayan==
 {{Reflist}}
 
 {{commonscat|VIAF=113806714|LCCN=n50075853|ISNI=0000 0001 1497 2036|GND=122298527|BNF=cb121536210|NDL=00621064}}
