*Empty MediaWiki Message*

--- a/A_Coruña.mw
+++ b/A_Coruña.mw
@@ -27,9 +27,9 @@ comarca = |
 comarca_link = |
 divisions = 5|
 neighborhoods = 9|
-mayor = Javier Losada|
-political_party = PSdeG|
-political_party_link = Socialist Party of Galicia|
+mayor = Xulio Ferreiro|
+political_party = Marea Atlántica|
+political_party_link = Marea Atlántica|
 area = 36.8|
 altitude = 13|
 population = 244,388 <small> ''(city proper, [[Instituto Nacional de Estadística (Spain)|INE]])''</small> <br />''Metropolitan area: 384,616''|
