*Empty MediaWiki Message*

--- a/A_Coruña.mw
+++ b/A_Coruña.mw
@@ -46,13 +46,13 @@ Ing '''A Coruña''' ([[Spanish language|Spanish]]: '''La Coruña'''; [[Galician 
 == Kapatad lakanbalen ==
 * {{flagicon|Spain}} [[Cádiz]], [[Spain]]
 
-== References ==
+== Dalerayan ==
 {{Commons|A Coruña}}
 * {{1911}}
 </div>
 {{reflist}}
 
-== External links ==
+== Kasusug Kiluwal ==
 * [http://www.coruna.es Ayuntamiento de A Coruña]
 * [http://www.turismocoruna.com  Tourism Office website for A Coruña (Turismo Coruña - Town Council)]
 * [http://www.turgalicia.es/sit/coruna.asp?cidi=I  Tourism website for A Coruña (TurGalicia - Regional Tourism Office)]
