*Empty MediaWiki Message*

--- a/A_Coruña.mw
+++ b/A_Coruña.mw
@@ -41,7 +41,7 @@ website = http://www.aytolacoruna.es|
 postal_code = 15xxx|
 area_code = 981|
 }}
-Ing '''A Coruña''' ([[Castila (amanu)|Espanyol]]: '''La Coruña'''; [[Amanung Galyegu|Galyegu]]: '''A Coruña'''; makanyan mu rin '''Corunna''' keng [[English language|English]],  [http://encyclopedia.jrank.org/COR_CRE/CORUNNA_Span_La_Coruna_Fr_La_Co.html]) iya ing pangaduang pekamaragul a lakanbalen king [[Galicia (Spain)|Galicia]] king pangulungal aalbugan ning [[Espanya]], pangaduan mu dakul keng pantalan ning [[Vigo]] king [[Pontevedra (lalawigan)|Pontevedra Lalawigan]]. Ing lakanbalen iya mu rin ing tungku ning [[A Coruña (lalawigan)|A Coruña Lalawigan]].
+Ing '''A Coruña''' o '''A Korunya''' ([[Castila (amanu)|Espanyol]]: '''La Coruña'''; [[Amanung Galyegu|Galyegu]]: '''A Coruña'''; makanyan mu rin '''Corunna''' keng [[English language|English]],  [http://encyclopedia.jrank.org/COR_CRE/CORUNNA_Span_La_Coruna_Fr_La_Co.html]) iya ing pangaduang pekamaragul a lakanbalen king [[Galicia (Spain)|Galicia]] king pangulungal aalbugan ning [[Espanya]], pangaduan mu dakul keng pantalan ning [[Vigo]] king [[Pontevedra (lalawigan)|Pontevedra Lalawigan]]. Ing lakanbalen iya mu rin ing tungku ning [[A Coruña (lalawigan)|A Coruña Lalawigan]].
 
 == Kapatad lakanbalen ==
 * {{flagicon|Spain}} [[Cádiz]], [[Spain]]
