--- a/Łobez.mw
+++ b/Łobez.mw
@@ -1,6 +1,17 @@
-[[Image:Lobez main street.jpg|thumbnail|170px|right|Łobez]]
-[[Image:Łobez-Polska.png|thumbnail|170px|right|Łobez - [[Poland]]]]
-Ing '''Łobez''' metung yang malating balen king aslagang dake ning  [[Poland]], atin 10,438 pakatuknang (2014), atiu keng [[Łobez County]] ning [[West Pomerania Voivodship]], keng pampang ning ilug [[Rega]].
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''{{PAGENAME}}'''</big></big><br />''Łobez''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[File:POL Łobez COA.svg|100px]]
+| align="center" width="140px" | [[File:Łobez-Polska.png|right|100px]]
+|}
+|-
+| align=center colspan=2 | [[File:Lobez main street.jpg|250px]]
+|}
+
+Ing '''Łobez''' metung yang malating balen king aslagang dake ning  [[Poland]], atin 10,409<ref>Główny Urząd Statystyczny, dane za rok 2015, stan na 01.01.2015.[http://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2015-r-,7,12.html]</ref> pakatuknang (2015), atiu keng [[Łobez County]] ning [[West Pomerania Voivodship]], keng pampang ning ilug [[Rega]].
 == Populasyun ==
 <timeline>
 ImageSize = width:420 height:320
