/* Suglung palwal */ Official website update

--- a/Diwan_(pipagaralan).mw
+++ b/Diwan_(pipagaralan).mw
@@ -7,7 +7,7 @@ Ing penibatan ning kaparalanan o sistemang Diwa, nung nu la manigaral Frances am
 Ketang 2005, maygit la king adwang libu adwang dalan (2,200) deng disipulus a magaral kareng escuelang Diwan king mabiug a Brittany manibat king preschool angga king colegiu. Mibusni ya ing metung a pipagaralan a Diwan king [[Paris]], [[w:France|Francia]] kanitang Septiembre 2004.
 
 ==Suglung palwal==
-*[http://www.diwanbreizh.org/ Diwan web site]
+*[http://www.diwan.bzh/ Diwan web site]
 *[http://www.telegraph.co.uk/global/main.jhtml?view=DETAILS&grid=&xml=/global/2006/06/14/exwlingo.xml  Learning the real local lingo can be child's play], ''[[Daily Telegraph]]'', [[14 June]] [[2006]]
 
 [[Category:Breton language]]
