--- a/Dominic_Ho.mw
+++ b/Dominic_Ho.mw
@@ -3,6 +3,7 @@ I '''Dominic Ho''' (何浩文, Ho Hou Man) metung yang artista, modelu ampon tal
 ==Suglung Palwal==
 * [http://www.facebook.com/DominicHHM Dominic Ho] king [[Facebook]]
 * [http://instagram.com/dominc_hhm Dominic Ho] king [[Instagram]]
+*{{weibo|dominic_hhm|Dominic Ho}}
 
 {{Suli}}
 
