--- a/Template:Country_data_Finland.mw
+++ b/Template:Country_data_Finland.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias = Finland
 | flag alias = Flag of Finland.svg
-| flag alias-naval = Naval Ensign of Finland.svg
+| flag alias-naval = Military Flag of Finland.svg
 | link alias-naval = Finnish Navy
 | size = {{{size|}}}
 | name = {{{name|}}}
