*Empty MediaWiki Message*

--- a/Tiffany_Hwang.mw
+++ b/Tiffany_Hwang.mw
@@ -1,5 +1,5 @@
 {{Korean name|Hwang}}
-[[File:Tiffany in March 2014 (02).jpg|right|200px]]
+[[File:Tiffany in March 2014 (02).jpg|thumb|200px]]
 I '''Stephanie Young Hwang''' ([[Amanung Koreanu|Koreanu]]: 황미영, [[Hanja]]: 黃美英, '''Hwang Mi-young''', Agostu 1, 1989, [[San Francisco, California| San Francisco]], [[California]]), mas mekilala yang '''Tiffany''', metung yang artista, talaterak at talakanta king [[Mauling Korea]]. Metung yang miyembru ning grupung [[Girls' Generation]].
 
 ==Suglung Palwal==
