*Empty MediaWiki Message*

--- a/Azpilkueta.mw
+++ b/Azpilkueta.mw
@@ -1,4 +1,4 @@
-[[File:Azpilikueta ikuspegia.jpg|thumb|Tanawin king Azpilkueta.]]
+[[File:Azpilikueta ikuspegia.jpg|thumb|Tanawan king Azpilkueta.]]
 Ing '''Azpilkueta''' o '''Azpilcueta''' metung yang lugal king [[Navarra]] king [[Espanya]].
 
 {{Suli}}
