Replacing Flag_of_Dominica_1978.svg with [[File:Flag_of_Dominica_(1978-1981).svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #4]]: To harmonize the fil

--- a/Template:Country_data_Dominica.mw
+++ b/Template:Country_data_Dominica.mw
@@ -3,7 +3,7 @@
 | flag alias = Flag of Dominica.svg
 | flag alias-1955 = Missing Blue Ensign.svg <!-- Flag of Dominica 1955-1965.png deleted from Commons -->
 | flag alias-1965 = Missing Blue Ensign.svg <!-- Flag of Dominica 1965-1978.gif deleted from Commons -->
-| flag alias-1978 = Flag of Dominica 1978.svg
+| flag alias-1978 = Flag of Dominica (1978-1981).svg
 | flag alias-1981 = Flag of Dominica 1981.svg
 | size = {{{size|}}}
 | name = {{{name|}}}
