--- a/Ames,_A_Coruña.mw
+++ b/Ames,_A_Coruña.mw
@@ -8,7 +8,7 @@ map_caption = Situation of '''Ames''' within [[Galicia (Spain)|Galicia]] |
 subdivision_type = [[Parroquia]]s|
 subdivision_name = ? |
 leader_title = Alcalde ([[Mayor]]) |
-leader_name = ? (?)|
+leader_name =José Miñones Conde (PSdeG-PSOE)|
 area_note = |
 area_magnitude = 1 E7 |
 area_total_km2 =80.55   |
