only corrected 8 typos.

--- a/Facebook.mw
+++ b/Facebook.mw
@@ -4,10 +4,10 @@
 | company_name              = Facebook, Inc.
 | company_logo              = [[File:Facebook.svg|175px]]
 | company_type              = [[Privately held company|Private]]
-| founder                   = [[Mark Zuckerberg]]<br />[[Chris Hughes (entrepreneur)|Chris Hughes]]<br />[[Dustin Moskovitz]]<br />[[Eduardo Saverin]]<!-- Order based on http://www.facebook.com/press/info.php?founderbios -->
+| founder                   = [[Mark Zuckerberg]]<br />[[Chris Hughes (entrepreneur)|Chris Hughes]]<br />[[Dustin Moskovitz]]<br />[[Eduardo Saverin]]<!-- Order based on https://www.facebook.com/press/info.php?founderbios -->
 | area_served               = [[World]]wide
 | foundation                = [[Cambridge, Massachusetts]]<ref name="Growth"/> (2004)
-| location                  = [[Palo Alto, California]], U.S. (main headquarters; serves the Americas)<br />[[Dublin]], Ireland (headquarters for Europe, Africa, Middle East)<br />[[Seoul]], South Korea (headquarters for Asia)<br />[[Wellington]], [[New Zealand]] (headquarters for Oceania), [[Hyderabad, India|Hyderabad]], [[India]]<ref>{{cite web|url=http://blog.facebook.com/blog.php?post=360924937130 |title=Niet compatibele browser &#124; Facebook |publisher=Blog.facebook.com |date= |accessdate=2010-11-07}}</ref> (Headquarters for South Asia)
+| location                  = [[Palo Alto, California]], U.S. (main headquarters; serves the Americas)<br />[[Dublin]], Ireland (headquarters for Europe, Africa, Middle East)<br />[[Seoul]], South Korea (headquarters for Asia)<br />[[Wellington]], [[New Zealand]] (headquarters for Oceania), [[Hyderabad, India|Hyderabad]], [[India]]<ref>{{cite web|url=https://blog.facebook.com/blog.php?post=360924937130 |title=Niet compatibele browser &#124; Facebook |publisher=Blog.facebook.com |date= |accessdate=2010-11-07}}</ref> (Headquarters for South Asia)
 | key_people                = [[Mark Zuckerberg]] <small>([[Chief executive officer|CEO]])</small><br />[[Chris Cox (Facebook)|Chris Cox]] <small>(VP of Product)</small><br />[[Sheryl Sandberg]] <small>([[Chief operating officer|COO]])</small>
 | revenue                   = {{profit}} US$800 million (2009 est.)<ref name="Estimated annual sales">{{cite news
  |url=http://economictimes.indiatimes.com/infotech/internet/Facebook-09-revenue-neared-800-mn-Sources/articleshow/6063819.cms
@@ -16,9 +16,9 @@
  |publisher= [[The Economic Times]]
 |date=2010-06-18}}</ref>
 | net_income                =
-| num_employees             = 1700+ (2010)<ref name="pressinfo">[http://www.facebook.com/press/info.php "Press Info"], Facebook. Retrieved May 27, 2010.</ref>
-| url                       = [http://www.facebook.com/ facebook.com]
-| ipv6                      = Yes, special URL [http://www.v6.facebook.com/ www.v6.facebook.com]
+| num_employees             = 1700+ (2010)<ref name="pressinfo">[https://www.facebook.com/press/info.php "Press Info"], Facebook. Retrieved May 27, 2010.</ref>
+| url                       = [https://www.facebook.com/ facebook.com]
+| ipv6                      = Yes, special URL [https://www.v6.facebook.com/ www.v6.facebook.com]
 | screenshot                = [[File:Facebook log in.png|center|200px]]
 | caption                   = Screenshot of Facebook's homepage
 | website_type              = [[Social network service]]
@@ -31,11 +31,11 @@
 | alexa                     = {{decrease}} 2 (Septiembri 2013)<ref>{{Cite document |url=http://www.alexa.com/siteinfo/facebook.com |title=Facebook.com&nbsp;– Traffic Details from Alexa |publisher=[[Alexa Internet]], Inc |accessdate=2010-10-25 |postscript=<!--None--> }}</ref>
 }}
 
-Ing '''Facebook''' metung yang [[social network service]] ampong karinan-Aptas (website) a milauk o miumpisan aniang Febrero 2004, at palakad ne at banding primadu ning Facebook, Inc.<ref name="Growth">{{cite web |accessdate=2008-12-19 |url=http://venturebeat.com/2008/12/18/2008-growth-puts-facebook-in-better-position-to-make-money/ |title=2008 Growth Puts Facebook In Better Position to Make Money |work=VentureBeat |date=2008-12-18 |author=Eldon, Eric.}}</ref> {{As of|July 2010}} Atin yang maigit 500 miliun a talagamit ing Facebook.<ref name=500m/><ref>{{cite web |url=http://www.facebook.com/press/info.php?statistics |title=Facebook Statistics |accessdate=July 21, 2010}}</ref><ref group=N name=totalactiveusers>Ing "active user" o aktibung talagamit dirinan neng kabaldugan ning Facebook antimong talagamit a minta king karinan-Aptas  kilub ning milabasan a 30 aldo.</ref> Maliari lang gawang personal a aske (personal profile) deng talagamit, mandagdag aliwang talagamit antimong kaluguran, at makilibeng mensahi, kayabe la reng tambing a pamagpabalu (''automatic notifications'') neng babayu de o a-update ing karelang aske o ''profile''. Bukud kaniti, makapakiabe la kareng grupu da reng milulupa ineres o ''common interest user groups'' deng talagamit, a miagum agpang king pipagobran, pipagaralan, o aliwa pang katangian. Ing lagiu ning serbisiu ibat ya king [[Facebook (directory)|palayo o aus a karniwan king libru]] a bibie da kareng magaral keng umpisa ning banuang academico deng manibala king universidad king America ba lang saupan a mikikilala deng magaral. Paintulutan neng makiabe antimong rehistradung talagamit ning Facebook ninumang magpawaga o sasabing maigit neng labing atlung  banua.
+Ing '''Facebook''' metung yang [[social network service]] ampong karinan-Aptas (website) a milauk o miumpisan aniang Febrero 2004, at palakad ne at banding primadu ning Facebook, Inc.<ref name="Growth">{{cite web |accessdate=2008-12-19 |url=http://venturebeat.com/2008/12/18/2008-growth-puts-facebook-in-better-position-to-make-money/ |title=2008 Growth Puts Facebook In Better Position to Make Money |work=VentureBeat |date=2008-12-18 |author=Eldon, Eric.}}</ref> {{As of|July 2010}} Atin yang maigit 500 miliun a talagamit ing Facebook.<ref name=500m/><ref>{{cite web |url=https://www.facebook.com/press/info.php?statistics |title=Facebook Statistics |accessdate=July 21, 2010}}</ref><ref group=N name=totalactiveusers>Ing "active user" o aktibung talagamit dirinan neng kabaldugan ning Facebook antimong talagamit a minta king karinan-Aptas  kilub ning milabasan a 30 aldo.</ref> Maliari lang gawang personal a aske (personal profile) deng talagamit, mandagdag aliwang talagamit antimong kaluguran, at makilibeng mensahi, kayabe la reng tambing a pamagpabalu (''automatic notifications'') neng babayu de o a-update ing karelang aske o ''profile''. Bukud kaniti, makapakiabe la kareng grupu da reng milulupa ineres o ''common interest user groups'' deng talagamit, a miagum agpang king pipagobran, pipagaralan, o aliwa pang katangian. Ing lagiu ning serbisiu ibat ya king [[Facebook (directory)|palayo o aus a karniwan king libru]] a bibie da kareng magaral keng umpisa ning banuang academico deng manibala king universidad king America ba lang saupan a mikikilala deng magaral. Paintulutan neng makiabe antimong rehistradung talagamit ning Facebook ninumang magpawaga o sasabing maigit neng labing atlung  banua.
 
 Ing Facebook tetag neng [[Mark Zuckerberg]] ampo reng ka-cuartu na king colegio ampo reng kalupa rang magaral computer science, di [[Eduardo Saverin]], [[Dustin Moskovitz]] ampong [[Chris Hughes (entrepreneur)|Chris Hughes]].<ref>{{cite web |url=http://www.businessinsider.com/how-facebook-was-founded-2010-3#we-can-talk-about-that-after-i-get-all-the-basic-functionality-up-tomorrow-night-1 |title=At Last&nbsp;– The Full Story Of How Facebook Was Founded |publisher=Business Insider |first=Nicholas |last=Carlson |date=2010-03-05}}</ref> Aniang mumuna, den mung magaral king [[Harvard]] deng maliaring makiabe, oneng miragdag la reng aliwang colegio students king lugal ning [[Boston]], ing [[Ivy League]], ampo ing [[Stanford University]]. Bagia-bagia, miragdag la reng magaral kareng miyaliwang universidad, bayu la miragdag deng magaral king secundario o matas a pipagaralan (''high school''), at bandang tauli, eganaganang maki edad a labing atlu o maigit.
 
-Agpang king pamanialugsug o pamagaral aniang Enero 2009 ning [[Compete.com]], ing Facebook ing gagamitan dang diling [[social network]] a gagamitan da king mabilug a yatu deng actibung, at katuki ne ing [[MySpace]].<ref name=Kazeniac>{{cite news |author=Kazeniac, Andy |title=Social Networks: Facebook Takes Over Top Spot, Twitter Climbs |url=http://blog.compete.com/2009/02/09/facebook-myspace-twitter-social-network/ |date=2009-02-09 |publisher=Compete.com |accessdate=2009-02-17}}</ref> Bibili ne ning ''[[Entertainment Weekly]]'' king kayang "best-of" list para king kapupusan ning decada, at sasabia'nang, "How on earth did we stalk our exes, remember our co-workers' birthdays, bug our friends, and play a rousing game of Scrabulous before Facebook?"(Makananu ta lang penalukian deng kekatamung sadiang/''dating'' tau, tandanan la reng aldo rang kebaitan deng kaupusina tamu, balik-balikan la reng kaluguran tamu, ampong mamialung makapangasdan a pialung ning Scrabulous bayu ing Facebook)<ref>{{cite news |author=Geier, Thom |coauthors=Jensen, Jeff; Jordan, Tina; Lyons, Margaret; Markovitz, Adam; Nashawaty, Chris; Pastorek, Whitney; Rice, Lynette; Rottenberg, Josh; Schwartz, Missy; Slezak, Michael; Snierson, Dan; Stack, Tim; Stroup, Kate; Tucker, Ken; Vary, Adam B.; Vozick-Levinson, Simon; Ward, Kate |date=December 11, 2009) |title=THE 100 Greatest Movies, TV Shows, Albums, Books, Characters, Scenes, Episodes, Songs, Dresses, Music Videos, and Trends that entertained us over the 10 Years |publisher=Entertainment Weekly |issue=(1079/1080):74-84}}</ref> Quantcast estimates Facebook has 135.1 million monthly unique U.S. visitors.<ref>{{cite web|url=http://www.quantcast.com/facebook.com |title=facebook.com&nbsp;— Quantcast Audience Profile |publisher=Quantcast.com |date=2010-10-27 |accessdate=2010-11-07}}</ref>
+Agpang king pamanialugsug o pamagaral aniang Enero 2009 ning [[Compete.com]], ing Facebook ing gagamitan dang diling [[social network]] a gagamitan da king mabilug a yatu deng actibung, at katuki ne ing [[MySpace]].<ref name=Kazeniac>{{cite news |author=Kazeniac, Andy |title=Social Networks: Facebook Takes Over Top Spot, Twitter Climbs |url=http://blog.compete.com/2009/02/09/facebook-myspace-twitter-social-network/ |date=2009-02-09 |publisher=Compete.com |accessdate=2009-02-17}}</ref> Bibili ne ning ''[[Entertainment Weekly]]'' king kayang "best-of" list para king kapupusan ning decada, at sasabia'nang, "How on earth did we stalk our exes, remember our co-workers' birthdays, bug our friends, and play a rousing game of Scrabulous before Facebook?"(Makananu ta lang penalukian deng kekatamung sadiang/''dating'' tau, tandanan la reng aldo rang kebaitan deng kaupusina tamu, balik-balikan la reng kaluguran tamu, ampong mamialung makapangasdan a pialung ning Scrabulous bayu ing Facebook)<ref>{{cite news |author=Geier, Thom |coauthors=Jensen, Jeff; Jordan, Tina; Lyons, Margaret; Markovitz, Adam; Nashawaty, Chris; Pastorek, Whitney; Rice, Lynette; Rottenberg, Josh; Schwartz, Missy; Slezak, Michael; Snierson, Dan; Stack, Tim; Stroup, Kate; Tucker, Ken; Vary, Adam B.; Vozick-Levinson, Simon; Ward, Kate |date=December 11, 2009) |title=THE 100 Greatest Movies, TV Shows, Albums, Books, Characters, Scenes, Episodes, Songs, Dresses, Music Videos, and Trends that entertained us over the 10 Years |publisher=Entertainment Weekly |issue=(1079/1080):74-84}}</ref> Quantcast estimates Facebook has 135.1 million monthly unique U.S. visitors.<ref>{{cite web|url=http://www.quantcast.com/facebook.com |title=Facebook.com&nbsp;— Quantcast Audience Profile |publisher=Quantcast.com |date=2010-10-27 |accessdate=2010-11-07}}</ref>
 
 == Notes ==
 <references group="N"/>
@@ -45,7 +45,7 @@ Agpang king pamanialugsug o pamagaral aniang Enero 2009 ning [[Compete.com]], in
 
 == Suglung palual ==
 {{Spoken Wikipedia|Facebook.ogg|August 15, 2009}}
-* {{Official website|http://www.facebook.com}}
+* {{Official website|https://www.facebook.com}}
 * {{Facebook|facebook}}
 * [http://www.telegraph.co.uk/technology/facebook/ "Facebook news and reviews"] at ''[[The Daily Telegraph]]''
 * {{Wiktionary-inline|facebook}}
