Removing "Seal_of_ASEAN.svg", it has been deleted from Commons by [[commons:User:Natuur12|Natuur12]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Wjplyw|]].

--- a/Aguman_da_reng_Bangsa_king_Mauli_Aslagang_Asia.mw
+++ b/Aguman_da_reng_Bangsa_king_Mauli_Aslagang_Asia.mw
@@ -18,7 +18,7 @@
 | linking_name = the Association of Southeast Asian Nations
 | image_flag =
 | flag_type = Bandera
-| image_symbol = Seal of ASEAN.svg
+| image_symbol =
 | symbol_type = Emblem
 | motto = <br />"One Vision, One Identity, One Community"<ref>{{cite web |url=http://www.asean.org/22773.htm |title=Aseanweb – Asean Motto |publisher=Asean.org |accessdate=8 August 2011}}</ref>
 | anthem = [[The ASEAN Way]]<br /><center>[[File:TheASEANway.ogg]]</center>
